--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,12 @@ li {
   text-align: center;
 }
 
+.button-container {
+	display: flex;
+	justify-content: space-evenly;
+	margin-bottom: 4vh;
+}
+
 .FilterMenu {
     bottom: 0;
     width: 100%;
